--- a/cs.tex
+++ b/cs.tex
@@ -1,5 +1,5 @@
-\documentclass[a4paper]{scrartcl}
-\usepackage[landscape, left=1cm,right=1cm, top=0cm, bottom=1cm,includeheadfoot]{geometry}
+\documentclass[leqno]{scrartcl}
+\usepackage[a3paper,landscape, left=1cm,right=1cm, top=0cm, bottom=1cm,includeheadfoot]{geometry}
 \usepackage[utf8]{inputenc}   % Zeichenkodierung: UTF-8 (für Umlaute)   
 \usepackage[german]{babel}    % Deutsche Sprache
 \usepackage{multicol}     % Spaltenpaket
@@ -9,9 +9,23 @@
 \usepackage{wasysym}      % Blitz
 \usepackage{graphicx}
 \usepackage{xcolor}
-\KOMAoption{fontsize}{10pt}
+\KOMAoption{fontsize}{12pt}
 \usepackage{blindtext}
-\usepackage{tikz} 
+\usepackage{tikz}
+\usepackage{enumitem}
+\setitemize{noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt}
+
+% \setlength{\abovedisplayskip}{0pt}
+% \setlength{\belowdisplayskip}{0pt}
+% \setlength{\abovedisplayshortskip}{0pt}
+% \setlength{\belowdisplayshortskip}{0pt} 
+\makeatletter
+\g@addto@macro\normalsize{%
+  \setlength\abovedisplayskip{5pt}
+  \setlength\belowdisplayskip{5pt}
+  \setlength\abovedisplayshortskip{5pt}
+  \setlength\belowdisplayshortskip{5pt}
+}
 
 
 \begin{document}
@@ -20,127 +34,161 @@
 \section{Basics (Non-FM)}
 
 \textbf{Erwartungswert:}
-$$E[X]=\mu=\sum_{i \in I} p_i x_i $$
+  \begin{equation}
+    E[X]=\mu=\sum_{i \in I} p_i x_i
+  \end{equation}
 \textbf{Varianz:}
-\begin{equation*}
-\begin{split}
-Var[X]&=\sigma^2\\
-      &=E[(X-E[X])^2]\\
-      &=E[X^2]-E[X]^2\\
-\end{split}
-\end{equation*}
+  \begin{equation*}
+    \begin{split}
+      Var[X]&=\sigma^2\\
+          &=E[(X-E[X])^2]\\
+          &=E[X^2]-E[X]^2\\
+    \end{split}
+  \end{equation*}
 \textbf{Kovarianz:}
-$$Cov[X,Y]=E[(X-E[X])(Y-E[Y])]$$
+  \begin{equation}
+    \begin{split}
+    Cov[X,Y]&=E[(X-E[X])(Y-E[Y])]\\
+    Cov[X,X]&=Var[X]
+    \end{split}
+  \end{equation}
 \textbf{Korrelationskoeffizient:}
-\begin{equation*}
-\begin{split}
-    Corr[X,Y] &= \varrho [X,Y]\\
-              &= \frac{Cov[X,Y]}{\sigma (X) \sigma (Y)}\\
-              &= \frac{Cov[X,Y]}{\sqrt{Var[X]}\sqrt{Var[Y]}}\\
-\end{split}
-\end{equation*}
+  \begin{equation*}
+    \begin{split}
+      Corr[X,Y] &= \varrho [X,Y]\\
+                &= \frac{Cov[X,Y]}{\sigma (X) \sigma (Y)}\\
+                &= \frac{Cov[X,Y]}{\sqrt{Var[X]}\sqrt{Var[Y]}}\\
+    \end{split}
+  \end{equation*}
 \textbf{p,q Formel:}
-$$x_{1,2}=\frac{-b \pm \sqrt{b^2 - 4ac}}{2a}$$
+  \begin{equation}
+    x_{1,2}=\frac{-b \pm \sqrt{b^2 - 4ac}}{2a}
+  \end{equation}
 
 \section{Entscheidungstheorie}
+
 \subsection{Dominanzkonzept}
 
 \begin{equation*}
 \begin{split}
-       & \text{A dominiert B strikt} \\
-     \Leftrightarrow & \forall t \in T : e_{A,t} > e_{B,t}\\
-       & \text{A dominiert B (schwach)} \\
-     \Leftrightarrow & \forall t \in T : e_{A,t} \geq e_{B,t} \wedge \exists t \in T : e_{A,t} > e_{B,t}\\
+        \text{A dominiert B strikt} \Leftrightarrow & \forall t \in T : e_{A,t} > e_{B,t}\\
+        \text{A dominiert B (schwach)} \Leftrightarrow & \forall t \in T : e_{A,t} \geq e_{B,t} \wedge \exists t \in T : e_{A,t} > e_{B,t}\\
 \end{split}
 \end{equation*}
-Das heißt, dass A zu allen Zeitpunkten größer oder gleich und mindestens ein mal echt größer als B ist.\\
-Ist eine Alternative nicht dominiert, dann ist sie effizient. Gibt es nur eine effiziente, ist es die dominante Alternative.
+Das heißt, dass A zu allen Zeitpunkten größer oder gleich und mindestens ein mal 
+echt größer als B ist. Ist eine Alternative nicht dominiert, dann ist sie 
+effizient. Gibt es nur eine effiziente, ist es die dominante Alternative.
 
 \subsection{Erwartungsnutzentheorie}
 
 \textbf{Eigenschaft eines Marktteilnehmers:}
-\begin{equation*}
-\begin{split}
-     \text{Risikoaversion}    &\Leftrightarrow E[U(X)] < U(E[X]) \\
-     \text{Risikoneutralität} &\Leftrightarrow E[U(X)] = U(E[X]) \\
-     \text{Risikofreude}      &\Leftrightarrow E[U(X)] > U(E[X]) \\
-\end{split}
-\end{equation*}
+  \begin{equation*}
+    \begin{split}
+      \text{Risikoaversion}    &\Leftrightarrow E[U(X)] < U(E[X]) \\
+      \text{Risikoneutralität} &\Leftrightarrow E[U(X)] = U(E[X]) \\
+      \text{Risikofreude}      &\Leftrightarrow E[U(X)] > U(E[X]) \\
+    \end{split}
+  \end{equation*}
 \textbf{Sicherheitsäquivalent (CE):}
-\begin{equation*}
-\begin{split}
-U(CE) &= E[U(X)]\\
-   CE &= U^{-1}(E[U(X)])\\
-\end{split}
-\end{equation*}
+  \begin{equation}
+    \begin{split}
+      U(CE) &= E[U(X)]\\
+        CE &= U^{-1}(E[U(X)])\\
+    \end{split}
+  \end{equation}
 \textbf{Risikoprämie (RP):}
-$$RP = E[X] - CE$$
+  \begin{equation}
+    RP = E[X] - CE
+  \end{equation}
 
 \subsection{Erwartungswert-Varianz-Prinzip}
 
+\textbf{Eigenschaft eines Marktteilnehmers:}
+  \begin{equation*}
+    \begin{split}
+      \text{Risikoaversion}    &\Leftrightarrow \frac{\delta U}{\delta \sigma} < 0 \\
+      \text{Risikoneutralität} &\Leftrightarrow \frac{\delta U}{\delta \sigma} = 0 \\
+      \text{Risikofreude}      &\Leftrightarrow \frac{\delta U}{\delta \sigma} > 0 \\
+    \end{split}
+  \end{equation*}
 \textbf{Sicherheitsäquivalent} (CE):
-$$\varphi(CE, 0) = \varphi(\mu, \sigma) $$
+  \begin{equation}
+    \varphi(CE, 0) = \varphi(\mu, \sigma)
+  \end{equation}
 \textbf{Risikoprämie (RP):}
-$$RP = E[X] - CE$$
+  \begin{equation}
+    RP = E[X] - CE
+  \end{equation}
 \textbf{Merke:} ($\mu$,$\sigma$)-Prinzip steht nur bei quadratischen und
-exponientiellen Nutzenfunktionen im Einklang mit dem Bernullidingens
+exponientiellen Nutzenfunktionen im Einklang mit dem Bernulliding
 
 \section{Investitionsrechnung}
 
 \subsection{Finanzmathematik}
 
 \textbf{Endwert} (aufzinsen)(terminal value):
-\begin{equation*}
-\begin{split}
-EW &= z_1(1+i)^{T-1} + \dots + z_{T-1}(1+i) + Z_T \\
-   &= \sum^T_{t=1} z_t (1+i)^{T-t}\\
-\end{split}
-\end{equation*}
+  \begin{equation}
+    \begin{split}
+      EW &= z_1(1+i)^{T-1} + \dots + z_{T-1}(1+i) + Z_T \\
+        &= \sum^T_{t=1} z_t (1+i)^{T-t}\\
+    \end{split}
+  \end{equation}
 \textbf{Barwert} (abzinsen)(present value, Gegenwartswert):
-\begin{equation*}
-\begin{split}
-BW &= \frac{z_1}{1+i}+\frac{z_2}{(1+i)^2}+\dots+\frac{z_T}{(1+i)^T}\\
-     &= \sum^T_{t=\color{red}{\textbf{1}}}\frac{z_t}{(1+i)^t}\\
-\end{split}
-\end{equation*}
+  \begin{equation}
+    \begin{split}
+      BW &= \frac{z_1}{1+i}+\frac{z_2}{(1+i)^2}+\dots+\frac{z_T}{(1+i)^T}\\
+          &= \sum^T_{t=\color{red}{\textbf{1}}}\frac{z_t}{(1+i)^t}\\
+    \end{split}
+  \end{equation}
 \textbf{Kapitalwert} (abzinsen)(net present value‚ Nettogegenwartswert, Nettobarwert)
-$$KW = \sum^T_{t=\color{red}{\textbf{0}}}\frac{z_t}{(1+i)^t}$$
+  \begin{equation}
+    KW = \sum^T_{t=\color{red}{\textbf{0}}}\frac{z_t}{(1+i)^t}
+  \end{equation}
 \textbf{Merke:} Bei PV wird die Anfangsauszahlung nicht abgezogen, beim NPV schon.
 
 \subsection{Investitionsrechnung}
 
-\color{gray}
-Konvergenz geometrischer Reihen:
-$$|\delta|<1 \rightarrow \sum^T_{t=0}\delta^t=\frac{1}{1-\delta}$$
-$$ \Rightarrow i > 0 \rightarrow \iff \implies \sum^T_{t=0}\left(\frac{1}{1+i}\right)^t  = \frac{1+i}{i}$$
-\color{black}
+\textbf{Konvergenz geometrischer Reihen:}
+  \begin{equation}\label{convergence}
+    \begin{split}
+    |\delta|<1 \rightarrow \sum^T_{t=0}\delta^t=\frac{1}{1-\delta}\\
+    \implies \forall i > 0 : \sum^T_{t=0}\left(\frac{1}{1+i}\right)^t  = \frac{1+i}{i}\\
+    \end{split}
+  \end{equation}
 \textbf{Ewige Rente (Zahlungsbeginn k):}
-$$KW = \sum^{\infty}_{t=\color{red}{\textbf{k}}}\frac{A}{(1+i)^t}=\frac{A}{i}(1+i)^{\color{red}{\textbf{1-k}}}$$
+  \begin{equation}
+    KW = \sum^{\infty}_{t=\color{red}{\textbf{k}}}\frac{A}{(1+i)^t} \overset{(\ref{convergence})}{=}\frac{A}{i}(1+i)^{\color{red}{\textbf{1-k}}}
+  \end{equation}
 \textbf{Ewige, nachschüssige Rente:}
-$$KW = \sum^{\infty}_{t=\color{red}{\textbf{1}}}\frac{A}{(1+i)^t}=\frac{A}{i}$$
+  \begin{equation}
+    KW = \sum^{\infty}_{t=\color{red}{\textbf{1}}}\frac{A}{(1+i)^t}=\frac{A}{i}
+  \end{equation}
 \textbf{Ewige, vorschüssige  Rente:}
-$$KW = \sum^{\infty}_{t=\color{red}{\textbf{0}}}\frac{A}{(1+i)^t}=\frac{A}{i}(1+i)^{\color{lightgray}{\textbf{1}}}$$
+  \begin{equation}
+    KW = \sum^{\infty}_{t=\color{red}{\textbf{0}}}\frac{A}{(1+i)^t}=\frac{A}{i}(1+i)^{\color{lightgray}{\textbf{1}}}
+  \end{equation}
 \textbf{KW $\sim$ EW:}
-\begin{equation*}
-\begin{split}
-&EW = KW (1+i)^{T}\\
-\iff &KW = EW (1+i)^{-T} \\
-\end{split}
-\end{equation*}
+  \begin{equation}\label{relation}
+    \begin{split}
+    &EW = KW (1+i)^{T}\\
+    \iff &KW = EW (1+i)^{-T} \\
+    \end{split}
+  \end{equation}
 \textbf{Annuität}:\\
-Eine zur Zahlungsreihe $z_t$ ($t$ = 0, 1, ..., T) äquivalente Annuität ist eine Reihe 
-gleich hoher Zahlungen A zu den Zeitpunkten 1, 2, ..., T, deren Kapitalwert 
-gleich dem der ursprünglichen Zahlungsreihe ist.
-\begin{equation*}
-\begin{split}
-KW &= \sum^T_{t=1}\frac{A}{(1+i)^t}\\
-KW &= \color{cyan}\underbrace{\frac{A}{i}}_\text{Ewige Rente (k=1)}
-      \color{black}-
-      \color{magenta}\underbrace{\frac{A}{i}\cdot\frac{1}{(1+i)^T}}_\text{Ewige Rente (k=T)}\\
-KW &= \color{orange}A \underbrace{\left(\frac{1}{i}-\frac{1}{i(1+i)^T}\right)}_\text{Rentenbarwertfaktor}\\
-A  &= KW \underbrace{\left(\frac{i(1+i)^T}{(1+i)^T-1}\right)}_\text{Annuitätenfaktor}\\
-\end{split}
-\end{equation*}
+  Eine zur Zahlungsreihe $z_t$ ($t$ = 0, 1, ..., T) äquivalente Annuität ist eine Reihe 
+  gleich hoher Zahlungen A zu den Zeitpunkten 1, 2, ..., T, deren Kapitalwert 
+  gleich dem der ursprünglichen Zahlungsreihe ist.
+  \begin{equation*}
+    \begin{split}
+      KW &= \sum^T_{t=1}\frac{A}{(1+i)^t}\\
+      KW &= \color{cyan}\underbrace{\frac{A}{i}}_\text{Ewige Rente (k=1)}
+            \color{black}-
+            \color{magenta}\underbrace{\frac{A}{i}\cdot\frac{1}{(1+i)^T}}_\text{Ewige Rente (k=T)}\\
+      KW &= A\color{orange} \underbrace{\left(\frac{1}{i}-\frac{1}{i(1+i)^T}\right)}_\text{Rentenbarwertfaktor}\\
+      KW &= A\color{orange} \underbrace{\left(\frac{(1+i)^T-1}{(1+i)^T \cdot i}\right)}_\text{Rentenbarwertfaktor}\\
+      A  &= KW \underbrace{\left(\frac{(1+i)^T \cdot i}{(1+i)^T-1}\right)}_\text{Annuitätenfaktor}\\
+    \end{split}
+  \end{equation*}
 \begin{center}
   \begin{tikzpicture}
     \draw [|-latex,line width=1pt, cyan] (0,1.0) -- node[above] {1, 2, 3, \dots} (8,1.0);
@@ -148,52 +196,174 @@ A  &= KW \underbrace{\left(\frac{i(1+i)^T}{(1+i)^T-1}\right)}_\text{Annuitätenf
     \draw [|-|,line width=1pt, orange] (0,0.0) -- node[above] {1, 2, 3, \dots, T} (5,0.0);
   \end{tikzpicture}
 \end{center}
+\textbf{AF $\sim$ RBF:}
+  \begin{equation}
+    AF = RBF^{-1}
+  \end{equation}
+\textbf{RBF$_n$ $\sim$ RBF$_v$:}
+  \begin{equation}\label{RBFsim}
+    RBF_v = RBF_n \cdot (1+i)
+  \end{equation}
+Nach(Vor)schüssig bedeutet, dass Zahlungen direkt nach(vor) dem Zins 
+stattfinden. D.h. für den EW, dass ein mal weniger(mehr) verzinst wird und für 
+den BW, dass ein mal mehr(weniger) abgezinst wird.\\
+\textbf{Rentenbarwert (nachschüssig):}
+  \begin{equation}
+    BW_n = A \cdot RBF_n = A \cdot \left(\frac{(1+i)^T - 1}{(1+i)^T \cdot i}\right)
+  \end{equation}
+\textbf{Rentenbarwert (vorschüssig):}
+  \begin{equation}
+    BW_v = A \cdot RBF_v \overset{\ref{RBFsim}}{=} A \cdot \left(\frac{(1+i)^T - 1}{(1+i)^T \cdot i}\right)\color{red} \cdot (1+i) 
+  \end{equation}
+\textbf{Rentenendwert (nachschüssig):}
+  \begin{equation}
+    EW_n = A \cdot REF_n = A \cdot \left(\frac{(1+i)^T - 1}{i}\right)
+  \end{equation}
+\textbf{Rentenendwert (vorschüssig):}
+  \begin{equation}
+    EW_v = A \cdot REF_v \overset{\ref{RBFsim}}{=} A \cdot \left(\frac{(1+i)^T - 1}{i}\right)\color{red} \cdot (1+i)
+  \end{equation}
 \textbf{Interner Zins:}
+  Es sei ($z_0, z_1, \dots, z_T$) ein Zahlungsstrom. Der interne Zins ist eine Zahl $i^*$ , die 
+  die folgende Gleichung löst:
+  $$0 = z_0 + \frac{z_1}{(1+i^*)^1} + \cdots + \frac{z_T}{(1+i^*)^T} = \sum^T_{t=0}\frac{z_t}{(1+i)^t}$$
+  Ersetze dazu $\delta^* = \frac{1}{(1+i)^t}$ und erreche $i^* = \frac{1}{\delta^*}-1$
 
 \subsection{Preinreich-Lücke-Theorem}
 
-\textbf{Kongruenzprinzip (1):}
-$$\sum^{T}_{t=0} (e_t-a_t) = \sum^{T}_{t=0} (L_t-K_t)$$
-\textbf{Residualgewinn (2):}
-$$RG_t=\underbrace{L_t-K_t}_\text{Periodengewinn}-\underbrace{i \cdot KB_{t-1}}_\text{Kapitalbindungszinsen}$$
+\textbf{Kongruenzprinzip:}
+  \begin{equation}\label{Kongruenzprinzip}
+    \sum^{T}_{t=0} (e_t-a_t) = \sum^{T}_{t=0} (L_t-K_t)
+  \end{equation}
+\textbf{Residualgewinn:}
+  \begin{equation}\label{Residualgewinn}
+    RG_t=\underbrace{L_t-K_t}_\text{Periodengewinn}-\underbrace{i \cdot KB_{t-1}}_\text{Kapitalbindungszinsen}
+  \end{equation}
 \textbf{Preinreich-Lücke-Theorem:}
-\begin{equation*}
-\begin{split}
-\sum^{T}_{t=0} \frac{RG_t}{(1+i)^t} 
-  &\overset{(2)}{=} \sum^{T}_{t=0} \frac{L_t - K_t - i \cdot KB_{t-1}}{(1+i)^t}\\
-  &\overset{(1)}{\equiv} \sum^{T}_{t=0} \frac{e_t - a_t}{(1+i)^t}
-  = \sum^{T}_{t=0} \frac{cf_t}{(1+i)^t}
-  =: KW
-\end{split}
-\end{equation*}
+  \begin{equation}
+    \begin{split}
+      \sum^{T}_{t=0} \frac{RG_t}{(1+i)^t} 
+        &\overset{\ref{Residualgewinn}}{=} \sum^{T}_{t=0} \frac{L_t - K_t - i \cdot KB_{t-1}}{(1+i)^t}\\
+        &\overset{\ref{Kongruenzprinzip}}{\equiv} \sum^{T}_{t=0} \frac{e_t - a_t}{(1+i)^t}
+        = \sum^{T}_{t=0} \frac{cf_t}{(1+i)^t}
+        =: KW
+    \end{split}
+  \end{equation}
 
 \section{Capital Asset Pricing Model (CAPM)}
 
-\blindtext
+\subsection{Bewertung des Risikos}
+  \textbf{Das Beta – Marktrisikosensitivität:}
+    \begin{equation}
+      \beta_i = \frac{Cov(r_i ,r_M)}{Var(r_M)}
+    \end{equation}
+  \textbf{Marktrisikoprämie:}
+    \begin{equation}
+      MRP = \mu(r_M) -r_f
+    \end{equation}
+  \textbf{Risikoprämie für ein WP$_i$:}
+    \begin{equation}
+      RP_i = \beta_i \cdot MRP
+    \end{equation}
+
+\subsection{Optimale Portfolioallokation und CAPM}
+
+\textbf{Erwartete Rendite eines Portfolios P aus n WPs:}
+  \begin{equation}
+    E[r_P] =\mu_P= \sum^{n}_{i=1} a_i \cdot E[r_i]
+  \end{equation}
+\textbf{Varianz eines Portfolios P aus n WPs:}
+  \begin{equation}
+    \begin{split}
+      Var[r_P]&=\sigma_P^2\\
+          &=E[(r_p-E[r_p])^2]\\
+          &=E[r_p^2]-E[r_p]^2\\
+          &=\sum^{n}_{i=1}\sum^{n}_{j=1}a_i \cdot a_j \cdot Cov[r_i,r_j]\\
+          &\overset{\color{red}{n=2}}{=} a^2_1 \sigma^2_1 + 2a_1a_2 \cdot Cov[r_1,r_2] + a^2_2 \sigma^2_2
+    \end{split}
+  \end{equation}
+\textbf{Kovarianz zweier Wertpapiere:}
+  \begin{equation}
+      Cov[r_i,r_j] = E[(r_i-E[r_i]) \cdot (r_j-E[r_j])]
+  \end{equation}
+\textbf{Korrelation zweier Wertpapiere:}
+  \begin{equation}
+    \begin{split}
+      Corr[r_i,r_j] &= \varrho [r_i,r_j] \in [-1,1]\\
+                    &= \frac{Cov[r_i,r_j]}{\sigma (r_i) \cdot \sigma (r_j)}\\
+    \end{split}
+  \end{equation}
+\textbf{Bedingungen für effiziente Portfolios:}
+  \begin{enumerate}
+    \item Portfolio minimiert bei gegebener erwarteter Rendite die Varianz
+    \item Portfolio wird nicht dominiert
+  \end{enumerate}
+\subsubsection{Kombination von $P$ mit risikoloser Anlage $f$:}
+Investor mischt $P$ mit einem sicheren Wertpapier $f$ mit der Rendite $r_f$ ($P(b)$). Anteil von $f$ betrage $(1 - b)$.\\
+\textbf{Erwartete Rendite:}
+  \begin{equation}
+    \begin{split}
+      E[r_{P(b)}]&=(1-b) \cdot r_f + b \cdot E[r_P]\\
+                 &=r_f + b \cdot (E[r_P ] - r_f)
+    \end{split}
+  \end{equation}
+\textbf{Varianz:}
+  \begin{equation}
+    \begin{split}
+      Var[r_{P(b)}] &= (1-b)^2 \cdot \overbrace{Var[r_f]}^{0}+ b^2 \cdot Var[r_P]\\
+                  &+ 2 \cdot (1-b) \cdot b \cdot \underbrace{Cov[r_f ,r_P ]}_{0}\\
+                  &= b^2 \cdot Var[r_P]
+    \end{split}
+  \end{equation}
+\subsubsection{CAPM:}
+\textbf{Annahmen:}
+  \begin{itemize}
+    \item Anleger sind rational und risikoavers
+    \item Der Markt ist vollkommen und friktionsfrei
+    \begin{itemize}
+      \item[$\bullet$] Homogene Erwartungen bezüglich erwarteter Rendite,\\ Volatilität und Korrelationen 
+      \item[$\bullet$] Kauf- und Verkaufspreise sind identisch
+      \item[$\bullet$] Keine Transaktionskosten
+      \item[$\bullet$] Kurze Positionen (short positions) zulässig
+      \item[$\bullet$] Keine Arbitragemöglichkeiten
+    \end{itemize}
+  \end{itemize} 
+\textbf{Kapitalmarktlinie (Zweipunkteform mit $x_1=0$):}
+  \begin{equation}
+    \mu_{KML} = r_f + \frac{\mu_M - r_f}{\sigma_M}\cdot \sigma_{KML}
+  \end{equation}
+\textbf{Capital-Asset-Pricing-Modell:}
+  \begin{equation}
+    \begin{split}
+      E[r_i] &= r_f +  \underbrace{\underbrace{(E[r_M] - r_f)}_{MRP} \cdot \underbrace{\frac{Cov[r_i,r_M]}{Var[r_M]}}_{\beta_i}}_{RP}\\
+    \end{split}
+  \end{equation}
+
+\subsection{Schätzung der Kapitalkosten}
+
+  \begin{equation}
+  \end{equation}
+  \begin{equation}
+  \end{equation}
 
 \section{Unternehmens- und Projektbewertung}
 
-\blindtext
+\subsection{DCF-Verfahren}
+\subsection{Unternehmensbewertung mit Steuern}
+\subsection{Wertermittlung mit Gewinnen}
 
 \section{Performancemaße}
 
-\blindtext
+\subsection{Bemessungsgrundlagen für Bonussysteme}
+\subsection{Beispiele zur Anreizwirkung}
+\subsection{Verfeinerung des Residualgewinnkonzeptes}
 
 \section{Investitionssteuerung}
 
-\blindtext
-\blindtext
-\blindtext
-\blindtext
-\blindtext
-\blindtext
-\blindtext
-\blindtext
-\blindtext
-\blindtext
-\blindtext
-\blindtext
-\blindtext
+\subsection{Residualgewinnorientierte INvestitionssteuerung}
+\subsection{Periodische Performancemaße}
+\subsection{Bonusbanken}
+\subsection{Implikationen für die Unternehmenssteuerung}
 
 \end{multicols}
 \end{document}
