--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -9,7 +9,7 @@
 \usepackage{wasysym}      % Blitz
 \usepackage{graphicx}
 \usepackage{xcolor}
-\KOMAoption{fontsize}{12pt}
+\KOMAoption{fontsize}{11pt}
 \usepackage{blindtext}
 \usepackage{tikz}
 \usepackage{enumitem}
@@ -29,14 +29,14 @@
 
 
 \begin{document}
-\begin{multicols}{3}
+\begin{multicols}{4}
 
 \section{Basics (Non-FM)}
 
 \textbf{Erwartungswert:}
-  \begin{equation}
+  \begin{equation*}
     E[X]=\mu=\sum_{i \in I} p_i x_i
-  \end{equation}
+  \end{equation*}
 \textbf{Varianz:}
   \begin{equation*}
     \begin{split}
@@ -46,12 +46,12 @@
     \end{split}
   \end{equation*}
 \textbf{Kovarianz:}
-  \begin{equation}
+  \begin{equation*}
     \begin{split}
     Cov[X,Y]&=E[(X-E[X])(Y-E[Y])]\\
     Cov[X,X]&=Var[X]
     \end{split}
-  \end{equation}
+  \end{equation*}
 \textbf{Korrelationskoeffizient:}
   \begin{equation*}
     \begin{split}
@@ -61,20 +61,19 @@
     \end{split}
   \end{equation*}
 \textbf{p,q Formel:}
-  \begin{equation}
+  \begin{equation*}
     x_{1,2}=\frac{-b \pm \sqrt{b^2 - 4ac}}{2a}
-  \end{equation}
+  \end{equation*}
 
 \section{Entscheidungstheorie}
 
 \subsection{Dominanzkonzept}
-
-\begin{equation*}
-\begin{split}
-        \text{A dominiert B strikt} \Leftrightarrow & \forall t \in T : e_{A,t} > e_{B,t}\\
-        \text{A dominiert B (schwach)} \Leftrightarrow & \forall t \in T : e_{A,t} \geq e_{B,t} \wedge \exists t \in T : e_{A,t} > e_{B,t}\\
-\end{split}
-\end{equation*}
+\begin{align*}
+&\text{A dominiert B strikt}\\
+\Leftrightarrow  &\forall t \in T : e_{A,t} > e_{B,t}\\
+&\text{A dominiert B (schwach)}\\
+\Leftrightarrow  &\forall t \in T : e_{A,t} \geq e_{B,t} \wedge \exists t \in T : e_{A,t} > e_{B,t}\\
+\end{align*}
 Das heißt, dass A zu allen Zeitpunkten größer oder gleich und mindestens ein mal 
 echt größer als B ist. Ist eine Alternative nicht dominiert, dann ist sie 
 effizient. Gibt es nur eine effiziente, ist es die dominante Alternative.
@@ -90,16 +89,16 @@ effizient. Gibt es nur eine effiziente, ist es die dominante Alternative.
     \end{split}
   \end{equation*}
 \textbf{Sicherheitsäquivalent (CE):}
-  \begin{equation}
+  \begin{equation*}
     \begin{split}
       U(CE) &= E[U(X)]\\
         CE &= U^{-1}(E[U(X)])\\
     \end{split}
-  \end{equation}
+  \end{equation*}
 \textbf{Risikoprämie (RP):}
-  \begin{equation}
+  \begin{equation*}
     RP = E[X] - CE
-  \end{equation}
+  \end{equation*}
 
 \subsection{Erwartungswert-Varianz-Prinzip}
 
@@ -112,13 +111,13 @@ effizient. Gibt es nur eine effiziente, ist es die dominante Alternative.
     \end{split}
   \end{equation*}
 \textbf{Sicherheitsäquivalent} (CE):
-  \begin{equation}
+  \begin{equation*}
     \varphi(CE, 0) = \varphi(\mu, \sigma)
-  \end{equation}
+  \end{equation*}
 \textbf{Risikoprämie (RP):}
-  \begin{equation}
+  \begin{equation*}
     RP = E[X] - CE
-  \end{equation}
+  \end{equation*}
 \textbf{Merke:} ($\mu$,$\sigma$)-Prinzip steht nur bei quadratischen und
 exponientiellen Nutzenfunktionen im Einklang mit dem Bernulliding
 
@@ -127,53 +126,53 @@ exponientiellen Nutzenfunktionen im Einklang mit dem Bernulliding
 \subsection{Finanzmathematik}
 
 \textbf{Endwert} (aufzinsen)(terminal value):
-  \begin{equation}
+  \begin{equation*}
     \begin{split}
       EW &= z_1(1+i)^{T-1} + \dots + z_{T-1}(1+i) + Z_T \\
         &= \sum^T_{t=1} z_t (1+i)^{T-t}\\
     \end{split}
-  \end{equation}
+  \end{equation*}
 \textbf{Barwert} (abzinsen)(present value, Gegenwartswert):
-  \begin{equation}
+  \begin{equation*}
     \begin{split}
       BW &= \frac{z_1}{1+i}+\frac{z_2}{(1+i)^2}+\dots+\frac{z_T}{(1+i)^T}\\
           &= \sum^T_{t=\color{red}{\textbf{1}}}\frac{z_t}{(1+i)^t}\\
     \end{split}
-  \end{equation}
+  \end{equation*}
 \textbf{Kapitalwert} (abzinsen)(net present value‚ Nettogegenwartswert, Nettobarwert)
-  \begin{equation}
+  \begin{equation*}
     KW = \sum^T_{t=\color{red}{\textbf{0}}}\frac{z_t}{(1+i)^t}
-  \end{equation}
+  \end{equation*}
 \textbf{Merke:} Bei PV wird die Anfangsauszahlung nicht abgezogen, beim NPV schon.
 
 \subsection{Investitionsrechnung}
 
 \textbf{Konvergenz geometrischer Reihen:}
-  \begin{equation}\label{convergence}
+  \begin{equation*}\label{convergence}
     \begin{split}
     |\delta|<1 \rightarrow \sum^T_{t=0}\delta^t=\frac{1}{1-\delta}\\
     \implies \forall i > 0 : \sum^T_{t=0}\left(\frac{1}{1+i}\right)^t  = \frac{1+i}{i}\\
     \end{split}
-  \end{equation}
+  \end{equation*}
 \textbf{Ewige Rente (Zahlungsbeginn k):}
-  \begin{equation}
+  \begin{equation*}
     KW = \sum^{\infty}_{t=\color{red}{\textbf{k}}}\frac{A}{(1+i)^t} \overset{(\ref{convergence})}{=}\frac{A}{i}(1+i)^{\color{red}{\textbf{1-k}}}
-  \end{equation}
+  \end{equation*}
 \textbf{Ewige, nachschüssige Rente:}
-  \begin{equation}
+  \begin{equation*}
     KW = \sum^{\infty}_{t=\color{red}{\textbf{1}}}\frac{A}{(1+i)^t}=\frac{A}{i}
-  \end{equation}
+  \end{equation*}
 \textbf{Ewige, vorschüssige  Rente:}
-  \begin{equation}
+  \begin{equation*}
     KW = \sum^{\infty}_{t=\color{red}{\textbf{0}}}\frac{A}{(1+i)^t}=\frac{A}{i}(1+i)^{\color{lightgray}{\textbf{1}}}
-  \end{equation}
+  \end{equation*}
 \textbf{KW $\sim$ EW:}
-  \begin{equation}\label{relation}
+  \begin{equation*}\label{relation}
     \begin{split}
     &EW = KW (1+i)^{T}\\
     \iff &KW = EW (1+i)^{-T} \\
     \end{split}
-  \end{equation}
+  \end{equation*}
 \textbf{Annuität}:\\
   Eine zur Zahlungsreihe $z_t$ ($t$ = 0, 1, ..., T) äquivalente Annuität ist eine Reihe 
   gleich hoher Zahlungen A zu den Zeitpunkten 1, 2, ..., T, deren Kapitalwert 
@@ -197,32 +196,32 @@ exponientiellen Nutzenfunktionen im Einklang mit dem Bernulliding
   \end{tikzpicture}
 \end{center}
 \textbf{AF $\sim$ RBF:}
-  \begin{equation}
+  \begin{equation*}
     AF = RBF^{-1}
-  \end{equation}
-\textbf{RBF$_n$ $\sim$ RBF$_v$:}
-  \begin{equation}\label{RBFsim}
-    RBF_v = RBF_n \cdot (1+i)
-  \end{equation}
+  \end{equation*}
+\textbf{RBF$_{nach}$ $\sim$ RBF$_{vor}$:}
+  \begin{equation*}\label{RBFsim}
+    RBF_{vor} = RBF_{nach} \cdot (1+i)
+  \end{equation*}
 Nach(Vor)schüssig bedeutet, dass Zahlungen direkt nach(vor) dem Zins 
 stattfinden. D.h. für den EW, dass ein mal weniger(mehr) verzinst wird und für 
 den BW, dass ein mal mehr(weniger) abgezinst wird.\\
 \textbf{Rentenbarwert (nachschüssig):}
-  \begin{equation}
-    BW_n = A \cdot RBF_n = A \cdot \left(\frac{(1+i)^T - 1}{(1+i)^T \cdot i}\right)
-  \end{equation}
+  \begin{equation*}
+    BW_{nach} = A \cdot RBF_n = A \cdot \left(\frac{(1+i)^T - 1}{(1+i)^T \cdot i}\right)
+  \end{equation*}
 \textbf{Rentenbarwert (vorschüssig):}
-  \begin{equation}
-    BW_v = A \cdot RBF_v \overset{\ref{RBFsim}}{=} A \cdot \left(\frac{(1+i)^T - 1}{(1+i)^T \cdot i}\right)\color{red} \cdot (1+i) 
-  \end{equation}
+  \begin{equation*}
+    BW_{vor} = A \cdot RBF_v \overset{\ref{RBFsim}}{=} A \cdot \left(\frac{(1+i)^T - 1}{(1+i)^T \cdot i}\right)\color{red} \cdot (1+i) 
+  \end{equation*}
 \textbf{Rentenendwert (nachschüssig):}
-  \begin{equation}
-    EW_n = A \cdot REF_n = A \cdot \left(\frac{(1+i)^T - 1}{i}\right)
-  \end{equation}
+  \begin{equation*}
+    EW_{nach} = A \cdot REF_n = A \cdot \left(\frac{(1+i)^T - 1}{i}\right)
+  \end{equation*}
 \textbf{Rentenendwert (vorschüssig):}
-  \begin{equation}
-    EW_v = A \cdot REF_v \overset{\ref{RBFsim}}{=} A \cdot \left(\frac{(1+i)^T - 1}{i}\right)\color{red} \cdot (1+i)
-  \end{equation}
+  \begin{equation*}
+    EW_{vor} = A \cdot REF_v \overset{\ref{RBFsim}}{=} A \cdot \left(\frac{(1+i)^T - 1}{i}\right)\color{red} \cdot (1+i)
+  \end{equation*}
 \textbf{Interner Zins:}
   Es sei ($z_0, z_1, \dots, z_T$) ein Zahlungsstrom. Der interne Zins ist eine Zahl $i^*$ , die 
   die folgende Gleichung löst:
@@ -232,15 +231,15 @@ den BW, dass ein mal mehr(weniger) abgezinst wird.\\
 \subsection{Preinreich-Lücke-Theorem}
 
 \textbf{Kongruenzprinzip:}
-  \begin{equation}\label{Kongruenzprinzip}
+  \begin{equation*}\label{Kongruenzprinzip}
     \sum^{T}_{t=0} (e_t-a_t) = \sum^{T}_{t=0} (L_t-K_t)
-  \end{equation}
+  \end{equation*}
 \textbf{Residualgewinn:}
-  \begin{equation}\label{Residualgewinn}
+  \begin{equation*}\label{Residualgewinn}
     RG_t=\underbrace{L_t-K_t}_\text{Periodengewinn}-\underbrace{i \cdot KB_{t-1}}_\text{Kapitalbindungszinsen}
-  \end{equation}
+  \end{equation*}
 \textbf{Preinreich-Lücke-Theorem:}
-  \begin{equation}
+  \begin{equation*}
     \begin{split}
       \sum^{T}_{t=0} \frac{RG_t}{(1+i)^t} 
         &\overset{\ref{Residualgewinn}}{=} \sum^{T}_{t=0} \frac{L_t - K_t - i \cdot KB_{t-1}}{(1+i)^t}\\
@@ -248,32 +247,32 @@ den BW, dass ein mal mehr(weniger) abgezinst wird.\\
         = \sum^{T}_{t=0} \frac{cf_t}{(1+i)^t}
         =: KW
     \end{split}
-  \end{equation}
+  \end{equation*}
 
 \section{Capital Asset Pricing Model (CAPM)}
 
 \subsection{Bewertung des Risikos}
   \textbf{Das Beta – Marktrisikosensitivität:}
-    \begin{equation}
+    \begin{equation*}
       \beta_i = \frac{Cov(r_i ,r_M)}{Var(r_M)}
-    \end{equation}
+    \end{equation*}
   \textbf{Marktrisikoprämie:}
-    \begin{equation}
+    \begin{equation*}
       MRP = \mu(r_M) -r_f
-    \end{equation}
+    \end{equation*}
   \textbf{Risikoprämie für ein WP$_i$:}
-    \begin{equation}
+    \begin{equation*}
       RP_i = \beta_i \cdot MRP
-    \end{equation}
+    \end{equation*}
 
 \subsection{Optimale Portfolioallokation und CAPM}
 
 \textbf{Erwartete Rendite eines Portfolios P aus n WPs:}
-  \begin{equation}
+  \begin{equation*}
     E[r_P] =\mu_P= \sum^{n}_{i=1} a_i \cdot E[r_i]
-  \end{equation}
+  \end{equation*}
 \textbf{Varianz eines Portfolios P aus n WPs:}
-  \begin{equation}
+  \begin{equation*}
     \begin{split}
       Var[r_P]&=\sigma_P^2\\
           &=E[(r_p-E[r_p])^2]\\
@@ -281,40 +280,40 @@ den BW, dass ein mal mehr(weniger) abgezinst wird.\\
           &=\sum^{n}_{i=1}\sum^{n}_{j=1}a_i \cdot a_j \cdot Cov[r_i,r_j]\\
           &\overset{\color{red}{n=2}}{=} a^2_1 \sigma^2_1 + 2a_1a_2 \cdot Cov[r_1,r_2] + a^2_2 \sigma^2_2
     \end{split}
-  \end{equation}
+  \end{equation*}
 \textbf{Kovarianz zweier Wertpapiere:}
-  \begin{equation}
+  \begin{equation*}
       Cov[r_i,r_j] = E[(r_i-E[r_i]) \cdot (r_j-E[r_j])]
-  \end{equation}
+  \end{equation*}
 \textbf{Korrelation zweier Wertpapiere:}
-  \begin{equation}
+  \begin{equation*}
     \begin{split}
       Corr[r_i,r_j] &= \varrho [r_i,r_j] \in [-1,1]\\
                     &= \frac{Cov[r_i,r_j]}{\sigma (r_i) \cdot \sigma (r_j)}\\
     \end{split}
-  \end{equation}
+  \end{equation*}
 \textbf{Bedingungen für effiziente Portfolios:}
   \begin{enumerate}
     \item Portfolio minimiert bei gegebener erwarteter Rendite die Varianz
     \item Portfolio wird nicht dominiert
   \end{enumerate}
-\subsubsection{Kombination von $P$ mit risikoloser Anlage $f$:}
+\subsubsection{Kombination von Portfolio $M$ mit risikoloser Anlage $f$:}
 Investor mischt $P$ mit einem sicheren Wertpapier $f$ mit der Rendite $r_f$ ($P(b)$). Anteil von $f$ betrage $(1 - b)$.\\
 \textbf{Erwartete Rendite:}
-  \begin{equation}
+  \begin{equation*}
     \begin{split}
-      E[r_{P(b)}]&=(1-b) \cdot r_f + b \cdot E[r_P]\\
-                 &=r_f + b \cdot (E[r_P ] - r_f)
+      E[r_K]&=(1-b) \cdot r_f + b \cdot E[r_M]\\
+                 &=r_f + b \cdot (E[r_M ] - r_f)
     \end{split}
-  \end{equation}
+  \end{equation*}
 \textbf{Varianz:}
-  \begin{equation}
+  \begin{equation*}
     \begin{split}
-      Var[r_{P(b)}] &= (1-b)^2 \cdot \overbrace{Var[r_f]}^{0}+ b^2 \cdot Var[r_P]\\
-                  &+ 2 \cdot (1-b) \cdot b \cdot \underbrace{Cov[r_f ,r_P ]}_{0}\\
-                  &= b^2 \cdot Var[r_P]
+      Var[r_K] &= (1-b)^2 \cdot \overbrace{Var[r_f]}^{0}+ b^2 \cdot Var[r_M]\\
+               &+ 2 \cdot (1-b) \cdot b \cdot \underbrace{Cov[r_f ,r_M ]}_{0}\\
+               &= b^2 \cdot Var[r_M0]
     \end{split}
-  \end{equation}
+  \end{equation*}
 \subsubsection{CAPM:}
 \textbf{Annahmen:}
   \begin{itemize}
@@ -329,42 +328,119 @@ Investor mischt $P$ mit einem sicheren Wertpapier $f$ mit der Rendite $r_f$ ($P(
     \end{itemize}
   \end{itemize} 
 \textbf{Kapitalmarktlinie (Zweipunkteform mit $x_1=0$):}
-  \begin{equation}
+  \begin{equation*}
     \mu_{KML} = r_f + \frac{\mu_M - r_f}{\sigma_M}\cdot \sigma_{KML}
-  \end{equation}
+  \end{equation*}
 \textbf{Capital-Asset-Pricing-Modell:}
-  \begin{equation}
+  \begin{equation*}
     \begin{split}
       E[r_i] &= r_f +  \underbrace{\underbrace{(E[r_M] - r_f)}_{MRP} \cdot \underbrace{\frac{Cov[r_i,r_M]}{Var[r_M]}}_{\beta_i}}_{RP}\\
     \end{split}
-  \end{equation}
+  \end{equation*}
 
 \subsection{Schätzung der Kapitalkosten}
 
-  \begin{equation}
-  \end{equation}
-  \begin{equation}
-  \end{equation}
+  \begin{equation*}
+  \end{equation*}
+  \begin{equation*}
+  \end{equation*}
 
-\section{Unternehmens- und Projektbewertung}
-
-\subsection{DCF-Verfahren}
-\subsection{Unternehmensbewertung mit Steuern}
-\subsection{Wertermittlung mit Gewinnen}
+%\section{Unternehmens- und Projektbewertung}
+%\subsection{DCF-Verfahren}
+%\subsection{Unternehmensbewertung mit Steuern}
+%\subsection{Wertermittlung mit Gewinnen}
 
 \section{Performancemaße}
+
+
+\subsection{Absolute Kennzahlen und Performancemaße}
+Economic Value Added (EVA), Cash Value Added (CVA)
+
+
+
+\subsection{Relative Kennzahlen und Performancemaße}
+
+\textbf{Return on Investment (ROI):}
+  \begin{equation*}
+    ROI_t = \frac{\text{Gewinn}_t}{\text{(Rest-)Buchwert des Eigenkapital}_{t-1}}
+  \end{equation*}
+  
+\textbf{Cashflow Return on Investment (CFROI):}
+  \begin{equation*}
+    CFROI_t = \frac{BCF_t-AB^{\text{öko}}}{BIB_0}
+  \end{equation*}
+  
+  Interner Zins
+
+
 
 \subsection{Bemessungsgrundlagen für Bonussysteme}
 \subsection{Beispiele zur Anreizwirkung}
 \subsection{Verfeinerung des Residualgewinnkonzeptes}
 
+\textbf{Residualgewinn: (KLR)}
+  \begin{equation*}
+    RG_t = cf_t - ab_t - i\cdot KB_{t-1}
+  \end{equation*}
+\textbf{Heidgens Tipp zur degresiven Abschreibung:}
+  \begin{equation*}
+    KB_t = KB_0(1-\delta)^t
+  \end{equation*}
+\textbf{Residualgewinn (Degresive Abschreibung):}
+  \begin{equation*}
+    RG_t = cf_t - KB_0(i+\delta)(1-\delta)^{t-1}
+  \end{equation*}
+
 \section{Investitionssteuerung}
+\textbf{Performancemaß Modell allgemein:}
+  \begin{equation*}
+    \prod_{t,i} = \alpha_{t,i} \cdot cf_{t,i} + \beta_{t,i} \cdot b_{0,i}
+  \end{equation*}
 
-\subsection{Residualgewinnorientierte INvestitionssteuerung}
-\subsection{Periodische Performancemaße}
+\subsection{Abschreibung}
+\textbf{Schwache Zielkongruenz:}
+  \begin{equation*}
+    E[KW_i] > 0 \iff \sum^{T_i}_{t=1} E[RG_{t,i}] > 0 \hspace{0.5cm} \forall\, t,i
+  \end{equation*}
+\textbf{Umsetzung durch Abschreibungsverfahren:}
+  \begin{equation*}
+    PM^{AB}_{t,i} = \underbrace{1}_{\alpha} \cdot cf_{t,i} - \underbrace{\frac{1}{T_i+r \cdot\left[1-\frac{t-1}{T_i})\right]}}_{\beta} \cdot b_{0,i}
+  \end{equation*}
+
+\subsection{Relatives Beitragsverfahren}
+\textbf{Starke Zielkongruenz:}
+  \begin{equation*}
+    E[KW_i] > 0 \iff E[RG_{t,i}^{\color{lightgray}RBV\color{black}}] > 0 \hspace{0.5cm} \forall\, t,i
+  \end{equation*}
+\textbf{Umsetzung durch relatives Beitragsverfahren:}
+  \begin{equation*}
+    PM^{RBV}_{t,i} = \underbrace{1}_{\alpha} \cdot cf_{t,i} - \underbrace{\sum^{T_i}_{\tau=1}x_{t,i}(1+r)^{-\tau}}_{\beta} \cdot b_{0,i}
+  \end{equation*}
+
+\subsection{Annuitätenverfahren}
+\textbf{Perfekte Zielkongruenz:}
+  \begin{align*}
+    &E[KW_i] > E[KW_j]\\
+    \iff &E[RG_{t,i}] > E[RG_{t,j}] \hspace{0.5cm} \forall\, t,i,j,i \neq j
+  \end{align*}
+\textbf{Umsetzung durch Annuitätenverfahren:}
+  \begin{equation*}
+        PM^{ANV}_{t,i} = \underbrace{\frac{A_i}{x_{t,i}} \cdot \sum^{T_i}_{\tau=1}x_{t,i}(1+r)^{-\tau}}_{\alpha} \cdot cf_{t,i} - \underbrace{A_i}_{\beta} \cdot b_{0,i}
+  \end{equation*}
+
 \subsection{Bonusbanken}
-\subsection{Implikationen für die Unternehmenssteuerung}
+\textbf{Perfekte Zielkongruenz auch bei unterschiedlichen Laufzeiten:}
+  \begin{align*}
+    &E[KW_i] > E[KW_j]\\
+    \iff & E[RG^{BB}_{t,i}] > E[RG^{BB}_{t,j}] \hspace{0.5cm} \forall\, t,i,j,i \neq j
+  \end{align*}
+\textbf{Umsetzung durch Bonusbanken:}
+``Verlängere'' die kürzere Laufzeit. Wähle $\delta = \frac{A_j}{A_i}$, wenn $T_i < T_j$, 1 sonst.
+  \begin{equation*}
+    PM^{BB}_{t,i} = \delta \cdot RG^{ANV}_{t,i} = \delta \cdot A_{i} \cdot KW_i
+  \end{equation*}
 
+  
 \end{multicols}
 \end{document}
 
