--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -90,9 +90,9 @@ effizient. Gibt es nur eine effiziente, ist es die dominante Alternative.
 \textbf{Eigenschaft eines Marktteilnehmers:}
   \begin{equation*}
     \begin{split}
-      \text{Risikoaversion}    &\Leftrightarrow E[U(X)] < U(E[X]) \\
-      \text{Risikoneutralität} &\Leftrightarrow E[U(X)] = U(E[X]) \\
-      \text{Risikofreude}      &\Leftrightarrow E[U(X)] > U(E[X]) \\
+      \text{RA}    &\iff E[U(X)] < U(E[X]) \iff U'' < 0\\
+      \text{RI} &\iff E[U(X)] = U(E[X]) \iff U'' = 0\\
+      \text{RF}      &\iff E[U(X)] > U(E[X]) \iff U'' > 0\\
     \end{split}
   \end{equation*}
 \textbf{Sicherheitsäquivalent (CE):}
