--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -177,10 +177,7 @@ den BW, dass ein mal mehr(weniger) abgezinst wird.\\
   \end{equation*}
 \textbf{Konvergenz geometrischer Reihen:}
   \begin{equation*}\label{convergence}
-    \begin{split}
-    |\delta|<1 \rightarrow \sum^T_{t=0}\delta^t=\frac{1}{1-\delta}\\
-    \implies \forall i > 0 : \sum^T_{t=0}\left(\frac{1}{1+i}\right)^t  = \frac{1+i}{i}\\
-    \end{split}
+    |\delta|<1 \rightarrow \sum^T_{t=0}\delta^t=\frac{1}{1-\delta}
   \end{equation*}
 \textbf{Annuität}:\\
   \begin{equation*}
@@ -370,7 +367,7 @@ Investor mischt $M$ mit einem sicheren Wertpapier $f$ mit der Rendite $r_f$ . An
 \textbf{Cash Value Added (CVA):}
   \begin{equation*}
   \begin{split}
-    CVA_t &= (CFROI_t - i_t) \cdot BIB_0\\
+    CVA_t &= (CFROI_t - i) \cdot BIB_0\\
           &= cf_t-ab^{\text{öko}}- i\cdot BIB_0
   \end{split}
   \end{equation*}
