--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -428,7 +428,7 @@ Investor mischt $M$ mit einem sicheren Wertpapier $f$ mit der Rendite $r_f$ . An
   \end{equation*}
 \textbf{Kapitaldienst:}
   \begin{equation*}
-    \beta_{t,i} \cdot b_0 = ab_{t,i} - i\cdot KB_{t-i}
+    \beta_{t,j} \cdot b_0 = ab_{t,j} - i\cdot KB_{t-1,j}
   \end{equation*}
 
 \subsection{Annuitätenverfahren}
