--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -189,7 +189,7 @@ den BW, dass ein mal mehr(weniger) abgezinst wird.\\
   \end{equation*}
 \textbf{Rentenbarwert (wachsend)}\\
   \begin{equation*}
-    BW = A  \left(\frac{(1+i)^T-(1+w)^T}{(1+i)^T \cdot (i-w)}\right)= A  \left(\frac{q^T-g^T}{g^T \cdot (q-g)}\right)
+    BW = A  \left(\frac{(1+i)^T-(1+w)^T}{(1+i)^T \cdot (i-w)}\right)= A  \left(\frac{q^T-g^T}{q^T \cdot (q-g)}\right)
   \end{equation*}
 \textbf{Rentenendwert}:\\
   \begin{equation*}
